--- a/lightweight/Base.lproj/Main.storyboard
+++ b/lightweight/Base.lproj/Main.storyboard
@@ -1,24 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main Search View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainSearchViewController" customModule="lightweight" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="ZDJ-o8-76c">
+                                <rect key="frame" x="0.0" y="44" width="414" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="sVY-Xw-tbx"/>
+                                </connections>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="dwm-7I-e7T">
+                                <rect key="frame" x="0.0" y="100" width="414" height="762"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="mediaCell" rowHeight="99" id="Wpw-qb-14T" customClass="MediaCell" customModule="lightweight" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="55.5" width="414" height="99"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wpw-qb-14T" id="Wh0-Mw-7uX">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="99"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OeX-SP-yc8">
+                                                    <rect key="frame" x="16" y="19.5" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="GYa-EJ-ACd"/>
+                                                        <constraint firstAttribute="width" constant="60" id="vYM-n0-VPk"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5RA-OS-e0T">
+                                                    <rect key="frame" x="84" y="23.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="94g-Pb-FHr">
+                                                    <rect key="frame" x="84" y="54" width="35.5" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="OeX-SP-yc8" firstAttribute="centerY" secondItem="Wh0-Mw-7uX" secondAttribute="centerY" id="8Ts-x8-OP4"/>
+                                                <constraint firstItem="94g-Pb-FHr" firstAttribute="leading" secondItem="5RA-OS-e0T" secondAttribute="leading" id="Kh2-WA-NDg"/>
+                                                <constraint firstItem="OeX-SP-yc8" firstAttribute="leading" secondItem="Wh0-Mw-7uX" secondAttribute="leading" constant="16" id="MrJ-K1-fSb"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="OeX-SP-yc8" secondAttribute="bottom" constant="16" id="gOi-js-l9D"/>
+                                                <constraint firstItem="5RA-OS-e0T" firstAttribute="leading" secondItem="OeX-SP-yc8" secondAttribute="trailing" constant="8" id="hZn-3Z-dQr"/>
+                                                <constraint firstItem="94g-Pb-FHr" firstAttribute="top" secondItem="5RA-OS-e0T" secondAttribute="bottom" constant="9.5" id="l5X-o6-YiK"/>
+                                                <constraint firstItem="5RA-OS-e0T" firstAttribute="top" secondItem="OeX-SP-yc8" secondAttribute="top" constant="4" id="yFs-O0-qKq"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="artworkImageView" destination="OeX-SP-yc8" id="H0d-7o-umI"/>
+                                            <outlet property="linkLabel" destination="94g-Pb-FHr" id="gmc-ik-Qbk"/>
+                                            <outlet property="nameLabel" destination="5RA-OS-e0T" id="5GV-i3-Pe8"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="uUG-tc-4rx"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="M8q-T2-Vgz"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZDJ-o8-76c" secondAttribute="trailing" id="Klm-0S-9CP"/>
+                            <constraint firstItem="dwm-7I-e7T" firstAttribute="top" secondItem="ZDJ-o8-76c" secondAttribute="bottom" id="anc-yb-ziY"/>
+                            <constraint firstItem="ZDJ-o8-76c" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="eoe-05-HYP"/>
+                            <constraint firstItem="ZDJ-o8-76c" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ftb-O1-JSm"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dwm-7I-e7T" secondAttribute="trailing" id="tSb-JB-a2K"/>
+                            <constraint firstItem="dwm-7I-e7T" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="y3R-4T-SGl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dwm-7I-e7T" secondAttribute="bottom" id="ymL-om-C2O"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="searchView" destination="ZDJ-o8-76c" id="daq-VU-Atj"/>
+                        <outlet property="tableView" destination="dwm-7I-e7T" id="wS9-1t-KX1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="79.6875"/>
         </scene>
     </scenes>
 </document>
