--- a/lightweight/Base.lproj/Main.storyboard
+++ b/lightweight/Base.lproj/Main.storyboard
@@ -52,11 +52,21 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="na7-Ln-Ux9">
+                                                    <rect key="frame" x="370" y="5.5" width="24" height="21.5"/>
+                                                    <color key="tintColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="24" id="cUa-8r-hda"/>
+                                                        <constraint firstAttribute="height" constant="24" id="nde-Zz-e0B"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="OeX-SP-yc8" firstAttribute="centerY" secondItem="Wh0-Mw-7uX" secondAttribute="centerY" id="8Ts-x8-OP4"/>
                                                 <constraint firstItem="94g-Pb-FHr" firstAttribute="leading" secondItem="5RA-OS-e0T" secondAttribute="leading" id="Kh2-WA-NDg"/>
                                                 <constraint firstItem="OeX-SP-yc8" firstAttribute="leading" secondItem="Wh0-Mw-7uX" secondAttribute="leading" constant="16" id="MrJ-K1-fSb"/>
+                                                <constraint firstAttribute="trailing" secondItem="na7-Ln-Ux9" secondAttribute="trailing" constant="20" id="cIY-Xj-YWZ"/>
+                                                <constraint firstItem="na7-Ln-Ux9" firstAttribute="top" secondItem="Wh0-Mw-7uX" secondAttribute="top" constant="4" id="eLZ-cV-xbu"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="OeX-SP-yc8" secondAttribute="bottom" constant="16" id="gOi-js-l9D"/>
                                                 <constraint firstItem="5RA-OS-e0T" firstAttribute="leading" secondItem="OeX-SP-yc8" secondAttribute="trailing" constant="8" id="hZn-3Z-dQr"/>
                                                 <constraint firstItem="94g-Pb-FHr" firstAttribute="top" secondItem="5RA-OS-e0T" secondAttribute="bottom" constant="9.5" id="l5X-o6-YiK"/>
@@ -65,6 +75,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="artworkImageView" destination="OeX-SP-yc8" id="H0d-7o-umI"/>
+                                            <outlet property="favoritedImageView" destination="na7-Ln-Ux9" id="CDL-o6-QBm"/>
                                             <outlet property="linkLabel" destination="94g-Pb-FHr" id="gmc-ik-Qbk"/>
                                             <outlet property="nameLabel" destination="5RA-OS-e0T" id="5GV-i3-Pe8"/>
                                         </connections>
@@ -98,4 +109,7 @@
             <point key="canvasLocation" x="137.68115942028987" y="79.6875"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="heart" catalog="system" width="128" height="109"/>
+    </resources>
 </document>
