--- a/lightweight/Base.lproj/Main.storyboard
+++ b/lightweight/Base.lproj/Main.storyboard
@@ -26,28 +26,28 @@
                                 <rect key="frame" x="0.0" y="100" width="414" height="762"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="mediaCell" rowHeight="99" id="Wpw-qb-14T" customClass="MediaCell" customModule="lightweight" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="55.5" width="414" height="99"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="mediaCell" rowHeight="132" id="Wpw-qb-14T" customClass="MediaCell" customModule="lightweight" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="55.5" width="414" height="132"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wpw-qb-14T" id="Wh0-Mw-7uX">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="99"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="132"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OeX-SP-yc8">
-                                                    <rect key="frame" x="16" y="19.5" width="60" height="60"/>
+                                                    <rect key="frame" x="16" y="36" width="60" height="60"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="60" id="GYa-EJ-ACd"/>
                                                         <constraint firstAttribute="width" constant="60" id="vYM-n0-VPk"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5RA-OS-e0T">
-                                                    <rect key="frame" x="84" y="23.5" width="42" height="21"/>
+                                                    <rect key="frame" x="84" y="40" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="94g-Pb-FHr">
-                                                    <rect key="frame" x="84" y="54" width="35.5" height="17"/>
+                                                    <rect key="frame" x="84" y="70.5" width="35.5" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -60,23 +60,36 @@
                                                         <constraint firstAttribute="height" constant="24" id="nde-Zz-e0B"/>
                                                     </constraints>
                                                 </imageView>
+                                                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFL-JD-idw">
+                                                    <rect key="frame" x="84" y="95.5" width="35.5" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="94g-Pb-FHr" secondAttribute="trailing" constant="16" id="3PC-6y-btQ"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kFL-JD-idw" secondAttribute="trailing" constant="16" id="65z-8e-QYE"/>
                                                 <constraint firstItem="OeX-SP-yc8" firstAttribute="centerY" secondItem="Wh0-Mw-7uX" secondAttribute="centerY" id="8Ts-x8-OP4"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="kFL-JD-idw" secondAttribute="bottom" constant="16" id="FJA-Dg-XF5"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5RA-OS-e0T" secondAttribute="trailing" constant="16" id="HYX-SF-K3b"/>
                                                 <constraint firstItem="94g-Pb-FHr" firstAttribute="leading" secondItem="5RA-OS-e0T" secondAttribute="leading" id="Kh2-WA-NDg"/>
                                                 <constraint firstItem="OeX-SP-yc8" firstAttribute="leading" secondItem="Wh0-Mw-7uX" secondAttribute="leading" constant="16" id="MrJ-K1-fSb"/>
+                                                <constraint firstItem="kFL-JD-idw" firstAttribute="top" secondItem="94g-Pb-FHr" secondAttribute="bottom" constant="8" id="MsK-dV-wt3"/>
                                                 <constraint firstAttribute="trailing" secondItem="na7-Ln-Ux9" secondAttribute="trailing" constant="20" id="cIY-Xj-YWZ"/>
                                                 <constraint firstItem="na7-Ln-Ux9" firstAttribute="top" secondItem="Wh0-Mw-7uX" secondAttribute="top" constant="4" id="eLZ-cV-xbu"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="OeX-SP-yc8" secondAttribute="bottom" constant="16" id="gOi-js-l9D"/>
                                                 <constraint firstItem="5RA-OS-e0T" firstAttribute="leading" secondItem="OeX-SP-yc8" secondAttribute="trailing" constant="8" id="hZn-3Z-dQr"/>
                                                 <constraint firstItem="94g-Pb-FHr" firstAttribute="top" secondItem="5RA-OS-e0T" secondAttribute="bottom" constant="9.5" id="l5X-o6-YiK"/>
+                                                <constraint firstItem="kFL-JD-idw" firstAttribute="leading" secondItem="94g-Pb-FHr" secondAttribute="leading" id="tPs-gj-hI9"/>
                                                 <constraint firstItem="5RA-OS-e0T" firstAttribute="top" secondItem="OeX-SP-yc8" secondAttribute="top" constant="4" id="yFs-O0-qKq"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="artworkImageView" destination="OeX-SP-yc8" id="H0d-7o-umI"/>
                                             <outlet property="favoritedImageView" destination="na7-Ln-Ux9" id="CDL-o6-QBm"/>
-                                            <outlet property="linkLabel" destination="94g-Pb-FHr" id="gmc-ik-Qbk"/>
+                                            <outlet property="genreLabel" destination="94g-Pb-FHr" id="ZJk-2w-YhT"/>
+                                            <outlet property="linkLabel" destination="kFL-JD-idw" id="ZGy-8t-Inh"/>
                                             <outlet property="nameLabel" destination="5RA-OS-e0T" id="5GV-i3-Pe8"/>
                                         </connections>
                                     </tableViewCell>
